<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/loginText"
            android:layout_marginStart="20dp"
            android:textSize="20dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/editTextLogin" />

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:textSize="20dp"
            app:layout_constraintLeft_toRightOf="@+id/textViewLogin"
            app:layout_constraintRight_toRightOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutLogin">

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0"
            android:text="@string/passwordText"
            android:textSize="20dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPassword"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/editTextLogin" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:textSize="20dp"
            app:layout_constraintLeft_toRightOf="@+id/textViewPassword"
            app:layout_constraintRight_toRightOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutPassword">

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="0"
            android:text="@string/buttonOK"
            android:textSize="20dp" />

        <Button
            android:id="@+id/buttonRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:text="@string/buttonRegistration"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutButton">

        <Button
            android:id="@+id/buttonClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:text="@string/textButtonClear"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutClear">

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20dp"
            android:text="@string/textButtonSettings"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
